smooth scroll, video backdrop fix and horizontal scrolling

--- a/portfolio.css
+++ b/portfolio.css
@@ -8,8 +8,7 @@
 }
 
 body {
-    overflow-x: hidden;
-    overflow-y: hidden;
+
 }
 
 #fullbar {
@@ -23,11 +22,11 @@ body {
   border: none;
 }
 
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+.navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-nav>.active>a:hover {
   background-color: transparent;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-nav>li>a:hover {
   background-color: #CD573F;
 }
 
@@ -35,7 +34,7 @@ body {
   border-bottom: none;
 }
 
-.navbar-inverse .navbar-toggle {
+.navbar-toggle {
   border-color: transparent;
 }
 
@@ -49,9 +48,12 @@ body {
   border-top: none;
 }
 
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+.navbar-toggle:focus, .navbar-toggle:hover {
   background-color: #CD573F;
 }
+
+.vidage::before {
+background-image: none;}
 
 .Vidage__video {
 position: absolute;
@@ -60,8 +62,11 @@ left: 50%;
 width: auto;
 height: auto;
 transform: translateX(-50%) translateY(-50%);
-min-width: 100%;
-min-height: 100%;
+width: 100vw;
+min-height: 100vh;
+opacity: 0.7;
+background-size: cover;
+overflow: hidden;
 }
 
 .Vidage__backdrop {
@@ -70,13 +75,14 @@ min-height: 100%;
   right: 0;
   bottom: 0;
   left: 0;
-  /* background: #360033;  /* fallback for old browsers */ */
-  /* background: -webkit-linear-gradient(to right, #0b8793, #360033);  /* Chrome 10-25, Safari 5.1-6 */ */
-  /* background: linear-gradient(to right, #0b8793, #360033); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ */
-  background: #dc2424; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #dc2424, #4a569d); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #dc2424, #4a569d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  opacity: 0.72;
+  background: #1a2a6c;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  opacity: 0.6 !important;
+
+  background-size: cover;
+  overflow: hidden;
 }
 
 .container {
@@ -86,16 +92,63 @@ min-height: 100%;
   margin-right: auto;
 }
 
+.anchor1, .anchor2, .anchor3, .anchor4 {
+  display: block;
+  height: 56px; /*same height as header*/
+  margin-top: -56px; /*same height as header*/
+  visibility: hidden;
+}
+
+.slider {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-destination: 100% 0%;
+  -webkit-scroll-snap-points-x: repeat(100vw);
+    -ms-scroll-snap-points-x: repeat(100vw);
+    scroll-snap-points-x: repeat(100vw);
+-webkit-scroll-snap-type: mandatory;
+    -ms-scroll-snap-type: mandatory;
+        scroll-snap-type: mandatory;
+
+  scroll-snap-type: y proximity;
+  scroll-snap-align: center;
+  scroll-snap-stop: always;
+}
+
+.slide {
+  width: 100vw;
+  flex-shrink: 0;
+  height: 100%;
+  scroll-behavior: smooth;
+  scroll-snap-align: start;
+}
+
+.slide > div:target {
+  transform: scale(0.8);
+}
+
 .center_content {
 display: flex;
 justify-content: center;
 align-items: center;
 min-height: 200px;
-height: calc(100vh - 5rem);
+height: calc(100vh - 5rem)
 flex-direction: column;
+padding-top: 50px;
+padding-left: 10px;
+padding-right: 10px;
+/* margin: 0 auto; */
 }
 
-.container h1 {
+.intro-section {
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
+ h1 {
   color: white;
   font-family: Poppins, sans-serif;
   letter-spacing: 0.3em;
@@ -108,21 +161,20 @@ flex-direction: column;
 
 @media screen and (max-width:600px){
   h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
 
-.container h2 {
+ h2 {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.2em;
   color: white;
   text-align: center;
 }
 
-.col-md-6 {
-  display: inline;
-  color: white;
-  text-align: center;
+.homebuttons {
+  display: flex;
+  margin-top:50px;
 }
 
 .homebox {
@@ -140,12 +192,16 @@ flex-direction: column;
   text-decoration: none;
   overflow: hidden;
   cursor: pointer;
-  padding-top: 10px;
+  margin: 0 auto;
 }
 
 .homebox:hover {
-    background: #CD573F;
-    padding-top: 10px;
+  background: #c94b4b;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4b134f, #c94b4b);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4b134f, #c94b4b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 button {
